<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_login"
        android:icon="@drawable/ic_login"
        android:title="Log In" />
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home"
        android:title="Početna" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="Postavke" />

</menu>
